2024R2/Mechanical-ACT-API-24R2/api/ansys/mechanical/stubs/v241/Ansys/ACT/Automation/Mechanical/FE/CDB/SecoffsetCommand.md
# `SecoffsetCommand`

<a id="ansys.mechanical.stubs.v241.Ansys.ACT.Automation.Mechanical.FE.CDB.SecoffsetCommand"></a>

#### *class* Ansys.ACT.Automation.Mechanical.FE.CDB.SecoffsetCommand

Bases: [`object`](https://docs.python.org/3/library/functions.html#object)

Represents a SECOFFSET command.

<!-- !! processed by numpydoc !! -->

<a id="overview"></a>

## Overview

### Properties

| Name | Description |
|------------------------------------------|--------------------------------------------|
| [`Index`](#SecoffsetCommand.Index)       | Gets the command index.                    |
| [`Location`](#SecoffsetCommand.Location) | Gets the location of nodes in the section. |
| [`Name`](#SecoffsetCommand.Name)         | Gets the command name.                     |
| [`Values`](#SecoffsetCommand.Values)     | Gets the values.                           |

<a id="property-detail"></a>

## Property detail

<a id="SecoffsetCommand.Index"></a>

### *property* SecoffsetCommand.Index *: [int](https://docs.python.org/3/library/functions.html#int) | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the command index.

<!-- !! processed by numpydoc !! -->

<a id="SecoffsetCommand.Location"></a>

### *property* SecoffsetCommand.Location *: [str](https://docs.python.org/3/library/stdtypes.html#str) | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the location of nodes in the section.

<!-- !! processed by numpydoc !! -->

<a id="SecoffsetCommand.Name"></a>

### *property* SecoffsetCommand.Name *: [str](https://docs.python.org/3/library/stdtypes.html#str) | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the command name.

<!-- !! processed by numpydoc !! -->

<a id="SecoffsetCommand.Values"></a>

### *property* SecoffsetCommand.Values *: [tuple](https://docs.python.org/3/library/stdtypes.html#tuple)[[float](https://docs.python.org/3/library/functions.html#float)] | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the values.

<!-- !! processed by numpydoc !! -->

