2024R2/Mechanical-ACT-API-24R2/api/ansys/mechanical/stubs/v242/Ansys/ACT/Automation/Mechanical/FE/CDB/SecoffsetCommand.md
# `SecoffsetCommand`



#### *class* ansys.mechanical.stubs.v242.Ansys.ACT.Automation.Mechanical.FE.CDB.SecoffsetCommand

Bases: [`object`](https://docs.python.org/3/library/functions.html#object)

Represents a SECOFFSET command.

<!-- !! processed by numpydoc !! -->

<a id="overview"></a>

## Overview

### Properties

| Name | Description |
|--------------------------------------------|----------------------------------------------|
| [`Location`](#SecoffsetCommand.Location)   | Gets the location of nodes in the section.   |
| [`Values`](#SecoffsetCommand.Values)       | Gets the values.                             |
| [`Name`](#SecoffsetCommand.Name)           | Gets the command name.                       |
| [`Index`](#SecoffsetCommand.Index)         | Gets the command index.                      |

<a id="property-detail"></a>

## Property detail

<a id="SecoffsetCommand.Location"></a>

### *property* SecoffsetCommand.Location *: System.String | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the location of nodes in the section.

<!-- !! processed by numpydoc !! -->

<a id="SecoffsetCommand.Values"></a>

### *property* SecoffsetCommand.Values *: System.Collections.Generic.IReadOnlyList[System.Double] | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the values.

<!-- !! processed by numpydoc !! -->

<a id="SecoffsetCommand.Name"></a>

### *property* SecoffsetCommand.Name *: System.String | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the command name.

<!-- !! processed by numpydoc !! -->

<a id="SecoffsetCommand.Index"></a>

### *property* SecoffsetCommand.Index *: System.UInt32 | [None](https://docs.python.org/3/library/constants.html#None)*

Gets the command index.

<!-- !! processed by numpydoc !! -->

